# sdecode

./: Cargo.toml  README.md
crates/sdecode/: Cargo.toml
crates/sdecode-core/: Cargo.toml
crates/sdecode-core/src/: decode.rs  item.rs  lib.rs  mapping.rs  node.rs  reader.rs  slot.rs  storage.rs
crates/sdecode-inspector/: Cargo.toml
crates/sdecode-inspector/src/: lib.rs
crates/sdecode-preimages/: Cargo.toml
crates/sdecode-preimages/src/: interfaces.rs  lib.rs  types.rs  utils.rs
crates/sdecode-preimages/src/caches/: approx.rs  general.rs  mod.rs  storage.rs
crates/sdecode-preimages/src/misc/: counter.rs  fill.rs  mod.rs
crates/sdecode-preimages/src/providers/: empty.rs  memory.rs  mod.rs
crates/sdecode-solidity/: Cargo.toml
crates/sdecode-solidity-macro/: Cargo.toml
crates/sdecode-solidity-macro/src/: array_size.rs  attribute.rs  lib.rs  linearize.rs  pp.rs  scope.rs  types.rs
crates/sdecode-solidity-macro/src/expansion/: contract.rs  enumm.rs  file.rs  mod.rs  structure.rs  udt.rs
crates/sdecode-solidity/src/: lib.rs  types.rs  utils.rs
crates/sdecode-solidity/src/values/: bytes_string.rs  dynamic_array.rs  enumm.rs  fixed_array.rs  mapping.rs  mod.rs  structure.rs  word.rs
crates/sdecode-test-utils/: Cargo.toml
crates/sdecode-test-utils/src/: lib.rs
crates/sdecode/examples/: aave_v3.rs  balancer_v2.rs  bayc.rs  curve_tricrypto.rs  morpho_blue.rs  punk.rs  uniswap_v3_factory.rs  uniswap_v3_pool.rs  uniswap_v4.rs
crates/sdecode/src/: lib.rs
test_data/aave-v3/: output.json
test_data/curve-tricrypto/: input.json  output.json
test_data/morpho-blue/: output.json
test_data/punk/: input.json  output.json
test_data/uniswap-v4/: output.json
