[package]
name = "sdecode-preimages"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Keccak256 preimages."
license.workspace = true
keywords.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde", "getrandom"] }
auto_impl.workspace = true
serde = {workspace = true, features = ["derive"] }
quick-impl.workspace = true
overf.workspace = true
