[package]
name = "sdecode-preimages"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Keccak256 preimages."
license.workspace = true
keywords.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }

serde = { workspace = true, features = ["derive"], optional = true }
hashbrown.workspace = true

auto_impl.workspace = true
quick-impl.workspace = true
overf.workspace = true

[features]
serde = ["dep:serde", "alloy-primitives/serde"]
default = ["serde"]
