[package]
name = "sdecode-solidity-macro"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
quick-impl.workspace = true
syn-solidity.workspace = true
indexmap.workspace = true
