[package]
name = "sdecode-test-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
alloy-primitives.workspace = true
sdecode.workspace = true
serde.workspace = true
serde_json.workspace = true
